--- a/recvops.properties
+++ b/recvops.properties
@@ -174,6 +174,8 @@ USE_FISHING_ITEM =0x67
 QUEST_ACTION = 0x68
 # 效果开关---
 EFFECT_ON_OFF = 0x69
+# 快捷交任务
+quest_KJ = 0x6A
 #
 THROW_BOMB = 0xFF
 # 报告玩家
