修复在线小游戏

--- a/recvops.properties
+++ b/recvops.properties
@@ -27,6 +27,7 @@ STRANGE_DATA = 0x15
 
 # LOGIN*
 LOGIN_PASSWORD = 0x01
+
 SERVERLIST_REREQUEST = 0xFF
 # 请求服务器列表
 SERVERLIST_REQUEST = 0x02
@@ -213,7 +214,7 @@ RING_ACTION = 0x85
 # 家族联盟
 ALLIANCE_OPERATION = 0x89
 # 家族BBS
-BBS_OPERATION = 0xFF
+BBS_OPERATION = 0x95
 # 进入拍卖
 ENTER_MTS = 0x8D
 #
