--- a/sendops.properties
+++ b/sendops.properties
@@ -88,7 +88,7 @@ USE_SKILL_BOOK = 0x35
 # 报告玩家
 REPORT_PLAYER_MSG = 0x39
 # 家族BBS
-BBS_OPERATION = 0xFF
+BBS_OPERATION = 0x38
 # 角色信息
 CHAR_INFO = 0x3A
 # 开启组队
@@ -164,9 +164,9 @@ REMOVE_PLAYER_FROM_MAP = 0xA3
 # 聊天信息
 CHATTEXT = 0xA4
 # 小黑板 
-CHALKBOARD = 0xA5
+CHALKBOARD = 0xA6
 # 更新玩家
-UPDATE_CHAR_BOX = 0xA6
+UPDATE_CHAR_BOX = 0xA7
 # 卷轴效果
 SHOW_SCROLL_EFFECT = 0xA9
 # 召唤宠物
@@ -310,11 +310,12 @@ ARIANT_PQ_START = 0x123
 # 扎昆门
 ZAKUM_SHRINE = 0x129
 
-MONSTER_CARNIVAL_START = 0xFF
-MONSTER_CARNIVAL_OBTAINED_CP = 0xFF
-MONSTER_CARNIVAL_PARTY_CP = 0xFF
-MONSTER_CARNIVAL_SUMMON = 0xFF
-MONSTER_CARNIVAL_DIED = 0xFF
+# 怪物嘉年华
+MONSTER_CARNIVAL_START = 0x129
+MONSTER_CARNIVAL_OBTAINED_CP = 0x12A
+MONSTER_CARNIVAL_PARTY_CP = 0x12B
+MONSTER_CARNIVAL_SUMMON = 0x12C
+MONSTER_CARNIVAL_DIED = 0x12D
 
 # NPC交谈
 NPC_TALK = 0x145
@@ -355,8 +356,8 @@ VICIOUS_HAMMER = 0x182
 
 
 # 地图动画播放
-CYGNUS_INTRO_LOCK = 0xFF
+CYGNUS_INTRO_LOCK = 0xE4
 # 地图动画结束
-CYGNUS_INTRO_DISABLE_UI = 0xFF
+CYGNUS_INTRO_DISABLE_UI = 0xE3
 # 人物动画创建
 CYGNUS_CHAR_CREATED = 0xFF
