修复钓鱼相关，及掉落物

--- a/CherryMS4Love.properties
+++ b/CherryMS4Love.properties
@@ -72,7 +72,7 @@ net.sf.cherry.world.serverNameMessage=Mak的冒险岛
 #======================几个大陆======
 net.sf.cherry.world.numberOfWorlds=1
 #-----------------------------
-net.sf.cherry.login.serverName=CTyuleMs
+net.sf.cherry.login.serverName=MakSvr
 # Flag at Channel Selection  0: Nothing 1: Event 2: New 3: Hot
 net.sf.cherry.login.flag=2
 net.sf.cherry.login.eventMessage=Mak的冒险岛
