no commit message

--- a/CherryMS4Love.properties
+++ b/CherryMS4Love.properties
@@ -16,12 +16,15 @@ password = root
 ###############################################
 
 
+# 世界服务器IP地址
+net.sf.cherry.world.host=127.0.0.1
+net.sf.cherry.login.port=8484
 
 
 #######频道服务器设置##########################
 ###############################################
-# 世界服务器IP地址
-net.sf.cherry.world.host=127.0.0.1
+net.sf.cherry.channel.net.interface=127.0.0.1
+net.sf.cherry.channel.net.port=7575
 # 服务器频道数量
 net.sf.cherry.channel.count=3
 # 频道钥匙
@@ -52,21 +55,17 @@ net.sf.cherry.channel.19.0.key=release20
 
 
 
-
 #################世界服务器设置################
 ###############################################
 #游戏基本设置
 ###############################################
 #IP与端口设置
-net.sf.cherry.channel.net.interface=192.168.58.1
-net.sf.cherry.login.port=8484
-net.sf.cherry.world.serverMessage=
+
+net.sf.cherry.world.serverMessage=aaaaaaaaaaaaaaaa[serverMessage]aaaaaaaaaa
 
 #======此项设置自动祝福喇叭,进地图提示等处显示的服务器名信息=====
 
 net.sf.cherry.world.serverNameMessage=Mak的冒险岛
-
-
 
 
 #======================几个大陆======
@@ -76,8 +75,11 @@ net.sf.cherry.login.serverName=MakSvr
 # Flag at Channel Selection  0: Nothing 1: Event 2: New 3: Hot
 net.sf.cherry.login.flag=2
 net.sf.cherry.login.eventMessage=Mak的冒险岛
-
 net.sf.cherry.login.maxCharacters=6
+net.sf.cherry.login.key=releaselogin
+net.sf.cherry.login.interval=5000
+net.sf.cherry.login.ranking.interval=1800000
+net.sf.cherry.login.userlimit=500
 
 
 # 倍率设置
@@ -94,32 +96,24 @@ net.sf.cherry.world.nxRate=3
 
 # 服务器控制设置
 ###############################################
-
-
-
 net.sf.cherry.world.cashshop=true
 net.sf.cherry.world.alldrop=false
 net.sf.cherry.world.morethanone=false
 net.sf.cherry.world.gmWhiteText=true
 net.sf.cherry.world.faekchar=false
-net.sf.cherry.login.interval=5000
-net.sf.cherry.login.ranking.interval=1800000
-net.sf.cherry.login.userlimit=500
-net.sf.cherry.channel.net.port=7575
+
 net.sf.cherry.net.autoreg=true
 net.sf.cherry.net.iplimit=false
 
 
 #login属性
-net.sf.cherry.world.host=127.0.0.1
-net.sf.cherry.login.key=releaselogin
 
 ##############################################
 
 # 服务器高级设置
 ####################################################
 #net.sf.cherry.channel.events=3rdjob,ZakumPQ,KerningPQ,GuildQuest,AutoMsg,AutoNx,Autogain,zidonglaba
-net.sf.cherry.channel.events=
+net.sf.cherry.channel.events=KerningPQ
 cherryMScustomEvent=Boat
 
 ####################################################
