修复市场Npc脚本 月兔副本

--- a/CherryMS4Love.properties
+++ b/CherryMS4Love.properties
@@ -113,7 +113,7 @@ net.sf.cherry.net.iplimit=false
 # 服务器高级设置
 ####################################################
 #net.sf.cherry.channel.events=3rdjob,ZakumPQ,KerningPQ,GuildQuest,AutoMsg,AutoNx,Autogain,zidonglaba
-net.sf.cherry.channel.events=KerningPQ
+net.sf.cherry.channel.events=KerningPQ,HenesysPQ
 cherryMScustomEvent=Boat
 
 ####################################################
