--- a/recvops.properties
+++ b/recvops.properties
@@ -261,8 +261,8 @@ DAMAGE_SUMMON = 0xB0
 MOVE_LIFE = 0xB7
 # 自动攻击
 AUTO_AGGRO = 0xB8
-# 
-MOB_DAMAGE_MOB = 0xBD
+# 怪物攻击怪物  mak
+MOB_DAMAGE_MOB = 0xBB
 # 怪物炸弹
 MONSTER_BOMB = 0xBC
 
