--- a/settings.ini
+++ b/settings.ini
@@ -22,7 +22,7 @@ server.settings.wflags = 0
 server.settings.autoRegister = true
 server.wzpath = wz
 server.settings.gmitems = true
-server.settings.serverName = DW
+server.settings.serverName = MS
 server.settings.expRate = 1
 server.settings.dropRate = 1
 server.settings.mesoRate = 1
